--- a/beattyFrame/Base.lproj/Main.storyboard
+++ b/beattyFrame/Base.lproj/Main.storyboard
@@ -918,6 +918,7 @@
                         <viewControllerLayoutGuide type="bottom" id="D0l-pk-nac"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="s6B-GP-Zl5">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grfx_building.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="u2C-Yz-hb4">
