Styled gallery cells

--- a/beattyFrame/utilities/EMBSPCell.xib
+++ b/beattyFrame/utilities/EMBSPCell.xib
@@ -151,37 +151,12 @@
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
-			<array key="connectionRecords">
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">titleLabel</string>
-						<reference key="source" ref="729007516"/>
-						<reference key="destination" ref="944680127"/>
-					</object>
-					<int key="connectionID">16</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">cellThumb</string>
-						<reference key="source" ref="729007516"/>
-						<reference key="destination" ref="804719842"/>
-					</object>
-					<int key="connectionID">24</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">imgFrame</string>
-						<reference key="source" ref="729007516"/>
-						<reference key="destination" ref="417428978"/>
-					</object>
-					<int key="connectionID">556</int>
-				</object>
-			</array>
+			<array key="connectionRecords" id="0"/>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
 					<object class="IBObjectRecord">
 						<int key="objectID">0</int>
-						<array key="object" id="0"/>
+						<reference key="object" ref="0"/>
 						<reference key="children" ref="1000"/>
 						<nil key="parent"/>
 					</object>
